# cursor-pong

./: Cargo.toml  build.rs  readme.md
shaders/: color.frag  quad.vert
src/: cursor_ball.rs  global.rs  lib.rs  main.rs  main_.rs  opengl.rs  opengl_.rs  player.rs  rect.rs  window.rs
src/framework/: mod.rs
src/framework/shader/: helper.rs  mod.rs
src/framework/traits/: mod.rs
src/framework/vertex/: mod.rs
src/game/: ball.rs  mod.rs  player.rs
src/shader/: mod.rs
src/traits/: mod.rs
src/vertex/: helper.rs  mod.rs
