[package]
name = "cursor-pong"
version = "0.1.0"
authors = ["nemui_sen <40149702+NemuiSen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "^0.17.0"
gl     = "^0.14.0"
glfw   = "^0.41.0"
glm    = "^0.2.3"
