[package]
name = "cursor-pong"
version = "0.1.0"
authors = ["nemui_sen <40149702+NemuiSen@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[dependencies]
cgmath = "^0.17.0"
gl     = "^0.14.0"
glfw   = "^0.41.0"
glm    = "^0.2.3"